커밋 보드리스트->리스트고침

--- a/syj/WebContent/write.html
+++ b/syj/WebContent/write.html
@@ -154,7 +154,7 @@
 
                             <h3 class="h2">우리 동네에 <span>청원 하기</span></h3>
 
-                            <form name="contactForm" id="contactForm" method="post" action="" autocomplete="off">
+                            <orm method="post" name="writeform"  action="/syj/writePro.do" onsubmit="return writeSave()" autocomplete="off">
                                 <fieldset>
 
                                     <div class="form-field">
