--- a/syj/WebContent/board.html
+++ b/syj/WebContent/board.html
@@ -172,7 +172,7 @@
                                         <div class="comment__meta">
                                             <div class="comment__time">April 30, 2019</div>
                                             <div class="comment__reply">
-                                                <a class="comment-reply-link" href="#comment.jsp">자세히 보기</a>
+                                                <a class="comment-reply-link" href="comment.jsp">자세히 보기</a>
                                             </div>
                                         </div>
                                     </div>
@@ -182,7 +182,7 @@
                                     facilisi expetenda has et. Iudico dictas scriptorem an vim, ei alia mentitum est, ne has voluptua praesent.</p>
                                     </div>
 
-                                </div>
+                                </div><!-- 게시글 번호5 -->
 
                             </li> <!-- end comment level 1 -->
 
@@ -213,6 +213,7 @@
                                     </div>
 
                                 </div>
+                                
 
                                 <ul class="children">
 
